--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,18 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.ivc</groupId>
-    <artifactId>cs174a-project</artifactId>
+
+    <groupId>org.ivc.dbms</groupId>
+    <artifactId>Gold</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.release>21</maven.compiler.release>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.oracle.database.jdbc</groupId>
@@ -17,4 +25,18 @@
             <version>23.7.0.25.01</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <!-- This plugin allows running Java from the command line -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <mainClass>org.ivc.dbms.Main</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
